[tool.poetry]
name = "uniquep-website"
version = "0.1.0"
description = ""
authors = ["tingwei628 <sbvq6p199xe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9.3"
Django = "^4.0.3"
django-cockroachdb = "^4.0"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
